fix: Java 21 .toList() + delete simplificado em ObraServiceImpl, AtividadeServiceImpl, CronogramaServiceImpl, FaseCronogramaServiceImpl